Fix arrow rotation on collapse (#1)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -139,3 +139,7 @@
     display: flex;
   }
 }
+
+.isCollapsed > .nav > .list > .collapseMenuItem {
+  transform: rotate(180deg);
+}
